--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -1,22 +1,82 @@
 {
   "name": "server",
-  "version": "0.1.0",
-  "main": "src/index.js",
-  "keywords": [],
+  "version": "0.0.0",
+  "description": "Toten API",
   "author": "",
   "license": "ISC",
-  "private": true,
   "scripts": {
-    "start": "nodemon",
+    "start": "npm run build && cross-env NODE_ENV=development nodemon dist/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon",
     "serve": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "swc src -d dist --source-maps --copy-files",
+    "build:tsc": "tsc && tsc-alias",
+    "test": "jest --forceExit --detectOpenHandles",
+    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
+    "lint:fix": "npm run lint -- --fix",
+    "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
+    "deploy:dev": "pm2 start ecosystem.config.js --only dev",
+    "migration:generate": "sequelize migration:generate --name",
+    "migration:run": "sequelize db:migrate"
   },
   "dependencies": {
+    "axios": "1.6.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "envalid": "^7.3.1",
+    "express": "^4.18.1",
+    "helmet": "^5.1.1",
+    "hpp": "^0.2.3",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.21.3",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.5.0",
+    "typedi": "^0.10.0",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.220",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/hpp": "^0.2.2",
+    "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.45",
+    "@types/sequelize": "^4.28.14",
+    "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "jest": "^28.1.1",
+    "lint-staged": "^13.0.3",
+    "node-config": "^0.0.2",
+    "node-gyp": "^9.1.0",
+    "nodemon": "^3.0.1",
+    "pm2": "^2.10.4",
+    "prettier": "^2.7.1",
+    "sequelize-cli": "^6.4.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.7.0",
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.7.4"
   }
 }
