--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -9,8 +9,13 @@
     "eject": "craco eject"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.28.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.3",
     "@tanstack/react-query-devtools": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -26,6 +31,7 @@
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "tailwind-merge": "^2.0.0",
