--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -19,6 +19,7 @@
     "migration:run": "sequelize db:migrate"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.12.21",
     "axios": "1.6.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -34,6 +35,7 @@
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
+    "svix": "^1.13.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
     "typedi": "^0.10.0",
