--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.12.21",
     "axios": "1.6.1",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
