--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -33,6 +33,7 @@
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
@@ -55,6 +56,7 @@
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.10",
     "@types/node": "^17.0.45",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
