--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -45,6 +45,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
+    "use-debounce": "^10.0.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.4"
   },
