--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-responsive-carousel": "^3.2.23",
