--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
+    "react-intersection-observer": "^9.5.3",
     "react-lazy-load-image-component": "^1.6.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
