--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "opencage-api-client": "^1.0.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
     "svix": "^1.13.0",
