--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -52,7 +52,8 @@
     "typescript": "^5.2.2",
     "use-debounce": "^10.0.0",
     "web-vitals": "^2.1.4",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.6"
   },
   "eslintConfig": {
     "extends": [
