--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -16,7 +16,8 @@
     "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
     "deploy:dev": "pm2 start ecosystem.config.js --only dev",
     "migration:generate": "sequelize migration:generate --name",
-    "migration:run": "sequelize db:migrate"
+    "migration:run": "sequelize db:migrate",
+    "db:seed": "sequelize db:seed:all"
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.12.21",
@@ -35,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "opencage-api-client": "^1.0.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
     "svix": "^1.13.0",
