--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.12.21",
+    "@types/uuid": "^9.0.7",
     "axios": "1.6.1",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
@@ -28,20 +29,24 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
+    "jokul-nodejs-library": "^2.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "opencage-api-client": "^1.0.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.3",
+    "stripe": "^14.5.0",
     "svix": "^1.13.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
+    "sync-request": "^6.1.0",
     "typedi": "^0.10.0",
     "uuid": "^9.0.1",
     "winston": "^3.8.1",
