--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -40,6 +41,8 @@
     "class-validator": "0.14.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "i18next": "^23.7.8",
+    "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -48,6 +51,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.5.0",
     "react-intersection-observer": "^9.5.3",
     "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^8.1.3",
@@ -81,7 +85,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.23.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "@craco/craco": "^7.1.0",
     "@types/react-color": "^3.0.10",
     "@types/react-lazy-load-image-component": "^1.6.3"
