feat: add product review feature

--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.12.21",
+    "@types/bad-words": "^3.0.3",
     "@types/uuid": "^9.0.7",
     "axios": "1.6.1",
+    "bad-words": "^3.0.4",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
