--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -41,6 +41,7 @@
     "class-validator": "0.14.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "i18next": "^23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
