--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -26,8 +26,6 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^5.8.3",
     "@tanstack/react-query-devtools": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -42,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.16",
     "i18next": "^23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
