--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
@@ -38,6 +39,7 @@
     "class-validator": "0.14.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "i18next": "^23.7.8",
@@ -61,6 +63,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "use-debounce": "^10.0.0",
+    "vaul": "^0.7.9",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
