--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -50,6 +50,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.5.0",
@@ -91,6 +92,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "@craco/craco": "^7.1.0",
     "@types/react-color": "^3.0.10",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-lazy-load-image-component": "^1.6.3"
   }
 }
