--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
+    "hashids": "^2.3.0",
     "i18next": "^23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
@@ -91,6 +92,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "@craco/craco": "^7.1.0",
+    "@types/hashids": "^2.0.1",
     "@types/react-color": "^3.0.10",
     "@types/react-helmet": "^6.1.11",
     "@types/react-lazy-load-image-component": "^1.6.3"
