--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
+    "hashids": "^2.3.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "jokul-nodejs-library": "^2.0.1",
@@ -62,6 +63,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/hashids": "^2.0.1",
     "@types/hpp": "^0.2.2",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
