--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -42,6 +42,8 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-autoplay": "^8.0.0-rc17",
+    "embla-carousel-react": "^8.0.0-rc17",
     "framer-motion": "^10.16.16",
     "hashids": "^2.3.0",
     "i18next": "^23.7.8",
