--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -61,6 +61,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^8.1.3",
+    "react-resizable-panels": "^1.0.7",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
