--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.0.0-rc17",
     "framer-motion": "^10.16.16",
     "hashids": "^2.3.0",
+    "history": "^5.3.0",
     "i18next": "^23.7.8",
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash": "^4.17.21",
