feat: Enhance product visibility and update manifest

--- a/projects/client/public/manifest.json
+++ b/projects/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tote",
-  "name": "E-Commerce",
+  "short_name": "Toten",
+  "name": "E-Commerce App",
   "icons": [
     {
       "src": "favicon.ico",
