chore: update env

--- a/projects/client/.env.production
+++ b/projects/client/.env.production
@@ -1,2 +1,2 @@
-PORT=3000
-REACT_APP_API_BASE_URL=http://monorepo.purwadhikabootcamp.com/api
+PORT=3101
+REACT_APP_API_BASE_URL=https://jcwdol01101.purwadhikabootcamp.com/
