--- a/projects/client/.env.production
+++ b/projects/client/.env.production
@@ -1,3 +1,3 @@
 PORT=3101
-REACT_APP_API_BASE_URL = https://jcwdol01101.purwadhikabootcamp.com/
+REACT_APP_API_BASE_URL = https://jcwdol01101.purwadhikabootcamp.com/api/v1
 REACT_APP_CLERK_PUBLISHABLE_KEY = pk_test_YXBwYXJlbnQtamVubmV0LTguY2xlcmsuYWNjb3VudHMuZGV2JA
