--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=development nodemon dist/server.js",
+    "start": "npm run build && cross-env NODE_ENV=production nodemon dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
     "serve": "node .",
     "build": "swc src -d dist --source-maps --copy-files",
@@ -31,6 +31,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
