chore: Update package.json

--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "craco start",
-    "build": "DISABLE_ESLINT_PLUGIN=true craco build",
+    "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
   },
