--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,9 @@ jobs:
         run: |
           npm install
           npm run build
+        env:
+          REACT_APP_API_BASE_URL: ${{ secrets.FE_API_URL }}
+          REACT_APP_CLERK_PUBLISHABLE_KEY: ${{ secrets.FE_CLERK_KEY }}
       - name: Deploy to Linode
         uses: appleboy/scp-action@master
         with:
@@ -28,8 +31,8 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: "./projects/client/build,./projects/client/package.json,./projects/server/dist, ./projects/server/src,./projects/server/package.json,./deploy.config.js,./package*.json"
-          target: "${{ secrets.SSH_FOLDER }}"
+          source: './projects/client/build,./projects/client/package.json,./projects/server/src,./projects/server/package.json,./deploy.config.js,./package*.json'
+          target: '${{ secrets.SSH_FOLDER }}'
       - name: Run App
         uses: appleboy/ssh-action@master
         with:
