--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          source: './projects/client/build,./projects/client/package.json,./projects/server/src,./projects/server/package.json,./deploy.config.js,./package*.json'
+          source: './projects/client/build,./projects/client/package.json,./projects/server/dist,./projects/server/package.json,./deploy.config.js,./package*.json'
           target: '${{ secrets.SSH_FOLDER }}'
       - name: Run App
         uses: appleboy/ssh-action@master
