--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && cross-env NODE_ENV=production nodemon dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
     "serve": "node .",
-    "build": "tsc",
+    "build": "swc src -d dist --source-maps --copy-files",
     "build:tsc": "tsc && tsc-alias",
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
