--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
+    "express-validator": "^7.0.1",
     "hashids": "^2.3.0",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
