--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -69,6 +69,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.10.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
